Ensure correct error handling for $out in sharded deployments

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v8.0
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Document_source_writer in sharded enviromnent throws errors when the output collection is moved or dropped.

      Based on the analysis from BF-34063, there seems to be an overlap in the error thrown for these two cases, however the two cases need different handling.

      This ticket will ensure that the error handling is performed accordingly for each case, and introduce the corresponding tests.

            Assignee:
            Matt Olma
            Reporter:
            Matt Olma
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: