SERVER-92690: Ensure correct error handling for $out in sharded deployments (#25085)

GitOrigin-RevId: 054ab75ec65d52f8c6dedc23a3981a08c4297940