src/mongo/db/modules/enterprise/src/streams/exec/mongodb_process_interface.h
@@ -313,6 +313,12 @@ public:
         return boost::none;
     }
 
+    boost::optional<mongo::DatabaseVersion> refreshAndGetDatabaseVersion(
+        const boost::intrusive_ptr<mongo::ExpressionContext>& expCtx,
+        const mongo::DatabaseName& dbName) const override {
+        return boost::none;
+    }
+
     void checkRoutingInfoEpochOrThrow(const boost::intrusive_ptr<mongo::ExpressionContext>& expCtx,
                                       const mongo::NamespaceString&,
                                       mongo::ChunkVersion) const override {
