src/mongo/db/pipeline/document_source_writer.h
@@ -295,10 +295,17 @@ DocumentSource::GetNextResult DocumentSourceWriter<B>::doGetNext() {
                 }
             }
         } catch (ExceptionFor<ErrorCodes::StaleDbVersion>& e) {
+            // check whether the database still exists to distinguish between a movePrimary and drop
+            // database, we should re-throw a non-retriable error in the latter case.
+            auto targetDatabaseVersion =
+                pExpCtx->mongoProcessInterface->refreshAndGetDatabaseVersion(pExpCtx,
+                                                                             pExpCtx->ns.dbName());
+
             uassert(ErrorCodes::NamespaceNotFound,
                     str::stream() << "database involved in aggregation write no longer exists: "
                                   << e->getDb().toStringForErrorMsg(),
-                    e->getVersionWanted());
+                    targetDatabaseVersion.has_value());
+
             // let the usual code path handle this error.
             throw;
         }
