src/mongo/db/pipeline/process_interface/non_shardsvr_process_interface.h
@@ -103,6 +103,12 @@ public:
         return boost::none;  // Nothing is sharded here.
     }
 
+    boost::optional<mongo::DatabaseVersion> refreshAndGetDatabaseVersion(
+        const boost::intrusive_ptr<ExpressionContext>& expCtx,
+        const DatabaseName& dbName) const final {
+        return boost::none;  // Nothing is sharded here.
+    }
+
     void checkRoutingInfoEpochOrThrow(
         const boost::intrusive_ptr<ExpressionContext>& expCtx,
         const NamespaceString& nss,
