src/mongo/db/pipeline/process_interface/stub_mongo_process_interface.h
@@ -336,6 +336,12 @@ public:
         return boost::none;
     }
 
+    boost::optional<mongo::DatabaseVersion> refreshAndGetDatabaseVersion(
+        const boost::intrusive_ptr<ExpressionContext>& expCtx,
+        const DatabaseName& dbName) const override {
+        return boost::none;
+    }
+
     void checkRoutingInfoEpochOrThrow(const boost::intrusive_ptr<ExpressionContext>& expCtx,
                                       const NamespaceString&,
                                       ChunkVersion) const override {
